--- a/app/src/main/res/layout/item_meme.xml
+++ b/app/src/main/res/layout/item_meme.xml
@@ -51,7 +51,7 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
             app:cardUseCompatPadding="true"
             android:layout_margin="5dp">
 
@@ -60,6 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:src="@drawable/sample_meme"
+                android:adjustViewBounds="true"
                 android:background="@color/bg_grey"/>
 
         </androidx.cardview.widget.CardView>
