--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,12 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="bg_grey">#E4E2E2</color>
+    <color name="bg_grey_dark">#121212</color>
     <color name="grey_400">#BDBDBD</color>
     <color name="grey_600">#757575</color>
+
+    <color name="skyblue">#1890FF</color>
+    <color name="dark_skyblue">#677DE9</color>
+    <color name="grey">#A5ABBD</color>
+    <color name="dark_grey">#414756</color>
 </resources>
