--- a/app/src/main/res/layout/fragment_meme_list.xml
+++ b/app/src/main/res/layout/fragment_meme_list.xml
@@ -10,40 +10,35 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:navigationIcon="@drawable/ic_memefire"
-        app:menu="@menu/menu_meme_list"
         android:elevation="4dp"
-        android:background="@color/white"
-        app:title="MemeShare"/>
+        app:title="MemeShare"
+        app:menu="@menu/menu_meme_list"
+        android:theme="@style/CustomToolbarTheme"/>
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/layout_swipe_refresh"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_meme"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/toolbar">
+        tools:listitem="@layout/item_meme"
+        android:layout_below="@id/toolbar"
+        android:scrollbars="vertical"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_meme"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:listitem="@layout/item_meme"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:spanCount="2"/>
-
-        <ProgressBar
-            android:id="@+id/progress_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"/>
-
-        <TextView
-            android:id="@+id/tv_empty_result"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="No Result found"
-            android:layout_centerInParent="true"/>
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/meme_loading"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/ricardo"
+        android:layout_centerInParent="true"/>
 
 
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    <TextView
+        android:id="@+id/tv_empty_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No Result found"
+        android:layout_centerInParent="true"/>
 
 
 </RelativeLayout>
