--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,16 +6,48 @@
         <item name="colorPrimaryVariant">@color/dark_skyblue</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondary">@color/bg_grey</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
 
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:windowBackground">@color/bg_grey</item>
 
         <item name="android:textColor">@color/black</item>
         <item name="fontFamily">@font/source_sans_pro_regular</item>
 
+    </style>
 
+    <style name="expandedBarTextStyle" parent="Theme.MaterialComponents">
+        <item name="android:textSize">0sp</item>
+        <item name="android:textColor">@android:color/transparent</item>
+
+    </style>
+
+    <style name="CustomCollapsingToolbarTheme" parent="@style/ThemeOverlay.MaterialComponents.ActionBar">
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="expandedTitleTextAppearance">@style/expandedBarTextStyle</item>
+    </style>
+
+    <style name="CustomAppBarTheme" parent="@style/ThemeOverlay.MaterialComponents.ActionBar">
+        <item name="android:background">@color/black</item>
+    </style>
+
+    <style name="CustomToolbarTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="android:background">@color/white</item>
+    </style>
+
+    <style name="CustomCardTheme" parent="Theme.MaterialComponents.DayNight">
+        <item name="cardBackgroundColor">@color/white</item>
+    </style>
+
+    <style name="CustomProgressBarTheme" parent="Theme.MaterialComponents.DayNight">
+        <item name="colorAccent">@color/dark_skyblue</item>
+    </style>
+
+    <style name="CustomTextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+        <item name="boxStrokeColor">@color/dark_skyblue</item>
+        <item name="hintTextColor">@color/black</item>
     </style>
 
 </resources>
